# Semantic-Mapper-ROS-Stack

./: LICENSE
object_detection/: CMakeLists.txt  README.md  package.xml
object_detection/launch/: object_detection_dk.launch  object_detection_dk_parameters.yaml  object_detection_tf.launch  object_detection_tf_parameters.yaml
object_detection/models/darknet/bb_file/: objects_data.csv
object_detection/models/darknet/data/: coco.data  coco.names
object_detection/models/tensorflow/dataset_labels/: mscoco_label_map.pbtxt
object_detection/msg/: Detections.msg  Object.msg
object_detection/nodes/: object_detection_dk.py  object_detection_tf.py
object_detection/scripts/: od_ops.py  od_shape_utils.py  od_visualization_utils.py
object_finder/: CMakeLists.txt  package.xml  setup.py
object_finder/files/: Object_LocatedAt_Place_Relations.npy  Object_NearBy_Object_Relations.npy  SuperObjects_Objects_Relations.npy
object_finder/nodes/: object_finder.py  searching_objects_simulation.py
object_finder/src/: knowledge_graph_creation.py
scene_recognition/: CMakeLists.txt  package.xml  setup.py
scene_recognition/common/: Places205_CustomCatsRepresentation.csv  Places205_fullRepresentation.csv
scene_recognition/launch/: scene_recognition.launch  scene_recognition_parameters.yaml
scene_recognition/msg/: DetectedScenes.msg  Scene.msg
scene_recognition/nodes/: scene_recognition_node.py
sem_map/: CMakeLists.txt  package.xml
sem_map/files/: Places205_fullRepresentation.csv  demo_segm.csv  lrm_isr3.csv  lrm_isr3_18_10_2018_15_30_52.json  objects_data.csv  (+3 more)
(+11 files in other folders)
